Fix tooltip overlap

--- a/source/_sass/_table-two.scss
+++ b/source/_sass/_table-two.scss
@@ -4,7 +4,7 @@
 .examples-grid {
   margin: 0;
   .examples-grid__header {
-    z-index: 1;
+    z-index: 3;
     transition: opacity 0.1s ease;
   }
   .examples-grid__header-row {
@@ -333,13 +333,7 @@
 
 
 .examples-grid__header {
-  // visibility: visible;
-  // transition: visibility 0s linear 0s, opacity 300ms;
-  .hidden {
-    // visibility: hidden;
-    // opacity: 0;
-    // transition: visibility 0s linear 300ms, opacity 300ms;
-  }
+
 }
 
 // mobile desktop
